app/assets/stylesheets/new_styles/02_buttons.scss
@import "foundation";

// -----------------------------------------
/* Competitor */
// -----------------------------------------
.competitor {
  background-color: $competitor;
}
.competitor:hover {
  background-color: $competitor_hover;
}
.competitor:active {
  background-color: $competitor_active;
}

// -----------------------------------------
/* Non Competitor */
// -----------------------------------------

.noncompetitor {
  background-color: $noncompetitor;
}
.noncompetitor:hover {
  background-color: $noncompetitor_hover;
}
.noncompetitor:active {
  background-color: $noncompetitor_active;
}

// -----------------------------------------
/* Spectator */
// -----------------------------------------

.spectator {
  background-color: $spectator;
}
.spectator:hover {
  background-color: $spectator_hover;
}
.spectator:active {
  background-color: $spectator_active;
}

// -----------------------------------------
/* Focus Buttons */
// -----------------------------------------
.focus_button:visited {
  background-color: $focus;
  color: white;
}

.focus_button {
  @include button($background: $focus, $background-hover: $focus_hover); //(220px);
  margin: 10px;
  color: white;

  &:hover {
    color: white;
    text-decoration: none;
  }

  &:active {
    background-color: $focus_active;
    border-color: #205f3c;
  }
}

.nonfocus_button:visited {
  background-color: white;
  color: $nonfocus;
}

.nonfocus_button {
  @include button($background: white, $background-hover: white);
  padding: map-get($button-sizes, small); //(220px);
  color: $nonfocus;
  border: 1px solid $nonfocus;

  &:hover {
    color: $nonfocus_hover;
    border: 1px solid $nonfocus_hover;
  }

  &:active {
    color: $nonfocus_active;
    background-color: white;
    border: 1px solid $nonfocus_active;
  }
}

// -----------------------------------------
/* Action Buttons */
// -----------------------------------------
.action_button {
  @include button($background: #12AC50, $background-hover: #4CD673);

  &:visited {
    color: black;
  }
}

.counter_action_button {
  @include button($background: #F1D6D6, $background-hover: #F16565);

  &:visited {
    color: black;
  }
}

.competitor_button {
  @include button($background: $competitor, $background-hover: $competitor_hover);

  &:active {
    background-color: $competitor_active;
  }
}

.noncompetitor_button {
  @include button($background: $noncompetitor, $background-hover: $noncompetitor_hover);

  &:active {
    background-color: $noncompetitor_active;
  }
}

.spectator_button {
  @include button($background: $spectator, $background-hover: $spectator_hover);

  &:active {
    background-color: $spectator_active;
  }
}


%reg_link {
  text-decoration: none;
}

.competitor_link {
  @extend %reg_link;
}
.noncompetitor_link {
  @extend %reg_link;
}
.spectator_link {
  @extend %reg_link;
}

.competitor_link {
  color: $competitor;
}
.competitor_link:visited {
  color: $competitor;
}
.competitor_link:hover {
  color: $competitor_hover;
}

.noncompetitor_link {
  color: $noncompetitor;
}
.noncompetitor_link:hover {
  color: $noncompetitor_hover;
}
.noncompetitor_link:visited {
  color: $noncompetitor;
}

.incomplete, .incomplete:hover {
  @include button($background: #666);
  color: #ccc;
  box-shadow:none !important;
  cursor: no-drop;
}

.back_link {
  @include button($background: black, $background-hover: #383838);

  &:active {
    background-color: #282828;
  }
  &:before {
    content: '< '
  }
}

// Small Expense Item Buttons
%small_button {
  @include button;
  padding: 5px;
  font-size: 12px;
}

.free_item {
  @extend %small_button;
  color: white;
  background-color: $free_item;

  &:hover {
    background-color: $free_item_hover;
  }
  &:active {
    background-color: $free_item_active;
  }
}

.delete {
  @extend %small_button;
  color: $delete_item;
  background-color: white;
  border: 1px solid;

  &:hover {
    background-color: $delete_item_hover;
    border-color: $delete_item_hover;
    color: white;
  }
  &:active {
    background-color: $delete_item_active;
    border-color: $delete_item_active;
    color:white;
  }
}

.cost_item {
  @extend %small_button;
  color: white;
  background-color: $cost_item;

  &:hover {
    background-color: $cost_item_hover;
  }
  &:active {
    background-color: $cost_item_active;
  }
}

.sold_out, .sold_out:hover {
  @extend %small_button;
  color: #ccc;
  background-color: #666;
  box-shadow:none;
  cursor: no-drop;
}


.locked_competition_action {
  @include button($background: #5B99F5, $background-hover: #9AC0F8);
}

.registration_button {
  @include button; //(220px);
  margin-bottom:10px;
  text-align:center;
}

.registration_button:hover, .registration_button:focus {
  text-decoration: none;
}

.registrant {
  border-bottom-left-radius: 11px;
  border-bottom-right-radius: 11px;
  border-top-left-radius: 11px;
  border-top-right-radius: 11px;
  padding: 3px;
}

.payment_link {
  @include button($background: $payment, $background-hover: $payment_hover); //(150px);
  color:white;
  &:visited {
    color: white;
  }

  &:active {
    background-color: $payment_active;
  }
}

